--- a/base/templates/project.html
+++ b/base/templates/project.html
@@ -4,13 +4,13 @@
 {% block projects %}
 
 <a href="{% url 'view_project' project.id %}">{{project.title}}</a>
-<p>{{project.description}}</p>
-<p>{{project.funding_goal}}</p>
-<p>{{project.current_funding}}</p>
-<p>{{project.creator}}</p>
+<p>Project Description: {{project.description}}</p>
+<p>Funding Goal: {{project.funding_goal}}</p>
+<p>Project Type : {{project.project_type}}</p>
+<p>Current Funding: {{project.current_funding}}</p>
 {% if project.creator != request.user %}
-<p>{{project.creator}}</p>
-<p>{{request.user}}</p>
+<p>Creator: {{project.creator}}</p>
+<!-- <p>{{request.user}}</p> -->
 <a href="{% url 'fund_project' project.id %}" class="btn btn-primary">Fund this project</a>
 {% endif %}
 
