updated projects display

--- a/base/templates/base_generic.html
+++ b/base/templates/base_generic.html
@@ -18,8 +18,8 @@
             <a class="nav-link--1" href="{% url 'all_projects' %}">Discover Projects</a>
             <a class="nav-link--2" href="{% url 'add_project' %}">Add a Project</a>
         </div>
-        <div class="nav-title">
-            <a href="{% url 'index' %}" style="text-decoration: None;"><h1 class="nav-title--text"><strong>Crowdfunding</strong></h1></a>
+        <div class="nav-title" style="align-items: center;">
+            <a href="{% url 'index' %}" style="text-decoration: None; "><span class="nav-title--text"><span>Crowdfunding</span></></a>
         </div>
 
         <div class="auth">
