--- a/base/templates/project_type.html
+++ b/base/templates/project_type.html
@@ -3,7 +3,7 @@
 
 {% block projects_type_list %}
 
-<p><strong>No of projects: </strong>{{projects_type_list|length}}</p>
+<p>Explore <strong>{{projects_type_list|length}} projects</strong></p>
 
 {% for project in projects_type_list %}
 
