--- a/base/templates/project_type.html
+++ b/base/templates/project_type.html
@@ -1,17 +1,19 @@
 {% extends "base_generic.html" %}
 
-
 {% block projects_type_list %}
+  {% if projects_type_list|length == 0%}
+  <p>No projects in this section</p>
+  {% endif %}
 
-<p>Explore <strong>{{projects_type_list|length}} projects</strong></p>
-
-{% for project in projects_type_list %}
-
-<h5><a href="{% url 'view_project' project.id %}" style="text-decoration:None">{{project.title}}</a></h5>
-
-<br>
-
-
-{% endfor %}
+  {% for project in projects_type_list %}
+    {% if request.user|lower|striptags != project.creator.username|lower|striptags %}
+      <p>Explore <strong>{{ projects_type_list|length }} projects</strong></p>
+      <h5><a href="{% url 'view_project' project.id %}" style="text-decoration: none;">{{ project.title }}</a></h5>
+      <p>{{ project.description }}</p>
+      <!-- Add more project details as needed -->
+      <br>
+    {% else %}
+    <p>No projects in this section</p>
+    {% endif %}
+  {% endfor %}
 {% endblock %}
-
