--- a/base/templates/project.html
+++ b/base/templates/project.html
@@ -8,8 +8,8 @@
 <p>Project Type : {{project.project_type}}</p>
 <p>Funding Goal: ₹{{project.funding_goal}}</p>
 <p>Current Funding: ₹{{project.current_funding}}</p>
-{% if project.creator != request.username %}
-<p>Creator: {{project.creator.username}}</p>
+{% if project.creator.user.username != request.username %}
+<p>Creator: {{project.creator.user.username}}</p>
 <p>{{project.remaining_time}}</p>
 <a href="{% url 'fund_project' project.id %}" class="btn btn-primary">Fund this project</a>
 {% endif %}
