--- a/base/templates/project.html
+++ b/base/templates/project.html
@@ -1,17 +1,28 @@
 {% extends "base_generic.html" %}
 
-
-{% block projects %}
-
-<a href="{% url 'view_project' project.id %}">{{project.title}}</a>
-<p>Project Description: {{project.description}}</p>
-<p>Project Type : {{project.project_type}}</p>
-<p>Funding Goal: ₹{{project.funding_goal}}</p>
-<p>Current Funding: ₹{{project.current_funding}}</p>
-{% if project.creator.user.username != request.username %}
-<p>Creator: {{project.creator.user.username}}</p>
-<p>{{project.remaining_time}}</p>
-<a href="{% url 'fund_project' project.id %}" class="btn btn-primary">Fund this project</a>
-{% endif %}
-
+{% block content %}
+    <h1>{{ project.title }}</h1>
+    <p>Project Description: {{ project.description }}</p>
+    <p>Project Type: {{ project.project_type }}</p>
+    <p>Funding Goal: ₹{{ project.funding_goal }}</p>
+    <p>Current Funding: ₹{{ project.current_funding }}</p>
+    {% if project.creator.user.username != request.user.username %}
+        <p>Creator: {{ project.creator.user.username }}</p>
+        <p>{{ project.remaining_time }}</p>
+        <a href="{% url 'fund_project' project.id %}" class="btn btn-primary">Fund this project</a>
+    {% endif %}
+    <hr>
+    <h2>Comments</h2>
+    {% for comment in project.comments.all %}
+        <p><strong>{{ comment.commenter_name }}</strong>: {{ comment.comment_body }}</p>
+        <p><small>{{ comment.date_added }}</small></p>
+    {% empty %}
+        <p>No comments yet.</p>
+    {% endfor %}
+    <form method="post" action="{% url 'add_comment' project.id %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Add Comment</button>
+    </form>
+    <hr>
 {% endblock %}
