--- a/base/templates/add_project.html
+++ b/base/templates/add_project.html
@@ -3,7 +3,7 @@
 {% block addproject %}
   <div class="add-project-container">
     <h2 class="add-project-heading">Add a New Project</h2>
-    <form method="post" action="{% url 'add_project' %}" class="add-project-form">
+    <form method="post" action="{% url 'add_project' %}" class="add-project-form" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="submit-button">Submit</button>
