--- a/base/templates/home.html
+++ b/base/templates/home.html
@@ -4,10 +4,10 @@
     <div class="hero" style="margin-top:10px; display: flex; flex-direction: row; justify-content: space-around; align-items: center; background-color: #f2f2f2; padding: 20px;">
         <div style="text-align: center; padding: 10px; border-radius: 10px; background-color: #ffffff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
             <h5 style="font-size: 24px; color: #3498db; font-weight: bold;">{{total_projects}}</h5>
-            <p style="font-size: 36px; color: #333;">Projects Funded</p>
+            <p style="font-size: 36px; color: #333;">Projects Backed</p>
         </div>
         <div style="text-align: center; padding: 10px; border-radius: 10px; background-color: #ffffff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-            <h5 style="font-size: 24px; color: #e74c3c; font-weight: bold;">{{total_funding}}</h5>
+            <h5 style="font-size: 24px; color: #3498db; font-weight: bold;"> ₹{{total_funding}}</h5>
             <p style="font-size: 36px; color: #333;">towards creative work</p>
         </div>
     </div>
