--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -8,7 +8,7 @@
             <p style="font-size: 36px; color: #333;">Projects Funded</p>
         </div>
         <div style="text-align: center; padding: 10px; border-radius: 10px; background-color: #ffffff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-            <h5 style="font-size: 24px; color: #e74c3c; font-weight: bold;">${{total_funding}}</h5>
+            <h5 style="font-size: 24px; color: #e74c3c; font-weight: bold;">₹{{total_funding}}</h5>
             <p style="font-size: 36px; color: #333;">towards creative work</p>
         </div>
     </div>
