--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -2,12 +2,12 @@
 
 {% block content %}
   {% load static %}
-    <div class="hero" style="margin-top:10px; display: flex; flex-direction: row; justify-content: space-around; align-items: center; background-color: #f2f2f2; padding: 20px;">
-        <div style="text-align: center; padding: 10px; border-radius: 10px; background-color: #ffffff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+    <div class="hero" style="margin-top:10px; display: flex; flex-direction: row; justify-content: space-around; align-items: center; background-color:white; padding: 20px;">
+        <div style="text-align: center; padding: 10px; border-radius: 10px; background-color: white; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
             <h5 style="font-size: 24px; color: #3498db; font-weight: bold;">{{total_projects}}</h5>
             <p style="font-size: 36px; color: #333;">Projects Funded</p>
         </div>
-        <div style="text-align: center; padding: 10px; border-radius: 10px; background-color: #ffffff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+        <div style="text-align: center; padding: 10px; border-radius: 10px; background-color:white; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
             <h5 style="font-size: 24px; color: #e74c3c; font-weight: bold;">₹{{total_funding}}</h5>
             <p style="font-size: 36px; color: #333;">towards creative work</p>
         </div>
@@ -30,7 +30,6 @@
 <div class="container hero-container">
     <div class="row justify-content-center">
       <div class="col-12 col-sm-8 col-lg-6">
-        <!-- Section Heading-->
         <div class="section_heading text-center wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
           <h3>Our Creative <span> Team</span></h3>
           <p>Individually, we are one drop. Together, we are an ocean</p>
