--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,7 +12,8 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'add_project' %}">CreateCampaign</a>
         </li>
-        <a href="{% url 'index' %}"><img src="https://fontmeme.com/permalink/240421/901fa5138c171e937de2827606fb07e7.png" class='title-img' alt="kickstarter-font" border="0"></a>
+        <!-- <a href="{% url 'index' %}"><img src="https://fontmeme.com/permalink/240421/901fa5138c171e937de2827606fb07e7.png" class='title-img' alt="kickstarter-font" border="0"></a> -->
+        <a href="{% url 'index' %}"><img style="width: 100px; height: 20px;"src="{% static 'media/images/Crowdfunding.png' %}" border="0"></a>
          
       </ul>
       <form class="d-flex" role="search">
